package handler

import (
	"fmt"
	"time"

	"im-connect-go/internal/channel"
	"im-connect-go/internal/config"
	pb "im-connect-go/internal/proto"
	"im-connect-go/internal/strategy"
	"im-connect-go/pkg/mq"
	"im-connect-go/pkg/redis"

	"go.uber.org/zap"
	"google.golang.org/protobuf/proto"
)

// MessageHandler æ¶ˆæ¯å¤„ç†å™¨ï¼ˆå¯¹æ ‡ Java HandlerDispatcher + WebSocketServerHandlerï¼‰
// åŠŸèƒ½ï¼š
// 1. Protobuf æ¶ˆæ¯è§£æå’Œåˆ†å‘
// 2. æ¶ˆæ¯ç±»å‹è·¯ç”±ï¼ˆç­–ç•¥æ¨¡å¼ï¼‰
// 3. æ¶ˆæ¯å¤„ç†ç»Ÿè®¡å’Œç›‘æ§
// 4. å¼‚å¸¸å¤„ç†å’Œå®¹é”™
// 5. æ€§èƒ½ä¼˜åŒ–ï¼ˆå¼‚æ­¥å¤„ç†ã€æ‰¹é‡å¤„ç†ç­‰ï¼‰
type MessageHandler struct {
	config         *config.Config
	logger         *zap.Logger
	channelManager *channel.Manager
	mqProducer     *mq.Producer       // RocketMQ ç”Ÿäº§è€…
	redisClient    *redis.RedisClient // Redis å®¢æˆ·ç«¯

	// æ¶ˆæ¯å¤„ç†ç­–ç•¥æ˜ å°„ï¼ˆå¯¹æ ‡ Java protoHandlersï¼‰
	strategies map[pb.MsgType]strategy.ProtoMsgHandlerStrategy

	// ç»Ÿè®¡ä¿¡æ¯
	messageStats MessageStats

	// å¼‚æ­¥å¤„ç†é˜Ÿåˆ—ï¼ˆå¯é€‰ä¼˜åŒ–ï¼‰
	messageQueue chan *MessageTask
	workerCount  int
}

// MessageTask æ¶ˆæ¯å¤„ç†ä»»åŠ¡
type MessageTask struct {
	Connection channel.Connection
	Message    []byte
	ReceivedAt time.Time
}

// MessageStats æ¶ˆæ¯å¤„ç†ç»Ÿè®¡
type MessageStats struct {
	TotalProcessed int64 `json:"total_processed"`
	TotalErrors    int64 `json:"total_errors"`
	C2CMessages    int64 `json:"c2c_messages"`
	Heartbeats     int64 `json:"heartbeats"`
	AckMessages    int64 `json:"ack_messages"`
	ProcessingTime int64 `json:"avg_processing_time_ms"`
}

// NewMessageHandler åˆ›å»ºæ¶ˆæ¯å¤„ç†å™¨
func NewMessageHandler(cfg *config.Config, logger *zap.Logger, cm *channel.Manager, mqProducer *mq.Producer, redisClient *redis.RedisClient) *MessageHandler {
	handler := &MessageHandler{
		config:         cfg,
		logger:         logger,
		channelManager: cm,
		mqProducer:     mqProducer,
		redisClient:    redisClient,
		strategies:     make(map[pb.MsgType]strategy.ProtoMsgHandlerStrategy),
		messageQueue:   make(chan *MessageTask, 10000), // æ¶ˆæ¯é˜Ÿåˆ—å¤§å°
		workerCount:    cfg.GetNettyRuntimeConfig().WorkerThreads,
	}

	// æ³¨å†Œæ¶ˆæ¯å¤„ç†ç­–ç•¥ï¼ˆå¯¹æ ‡ Java ApplicationContext è‡ªåŠ¨æ³¨å…¥ï¼‰
	handler.registerStrategies()

	// å¯åŠ¨å¼‚æ­¥å¤„ç†workerï¼ˆå¯é€‰ä¼˜åŒ–ï¼‰
	handler.startWorkers()

	logger.Info("âœ… æ¶ˆæ¯å¤„ç†å™¨åˆå§‹åŒ–å®Œæˆ",
		zap.Int("strategy_count", len(handler.strategies)),
		zap.Int("worker_count", handler.workerCount),
		zap.Int("queue_size", cap(handler.messageQueue)),
	)

	return handler
}

// registerStrategies æ³¨å†Œæ¶ˆæ¯å¤„ç†ç­–ç•¥ï¼ˆå¯¹æ ‡ Java setApplicationContextï¼‰
func (h *MessageHandler) registerStrategies() {
	// æ³¨å†Œ C2C æ¶ˆæ¯å‘é€ç­–ç•¥
	c2cSendStrategy := strategy.NewC2CMsgSendStrategy(h.config, h.logger, h.channelManager, h.mqProducer, h.redisClient)
	h.strategies[pb.MsgType_C2C_SEND] = c2cSendStrategy
	h.logger.Info("æ³¨å†Œæ¶ˆæ¯å¤„ç†ç­–ç•¥", zap.String("type", "C2C_SEND"))

	// æ³¨å†Œå®¢æˆ·ç«¯æ¶ˆæ¯ç¡®è®¤ç­–ç•¥
	c2cAckStrategy := strategy.NewC2CMsgAckStrategy(h.config, h.logger, h.channelManager)
	h.strategies[pb.MsgType_CLIENT_RECEIVED_MSG_ACK] = c2cAckStrategy
	h.logger.Info("æ³¨å†Œæ¶ˆæ¯å¤„ç†ç­–ç•¥", zap.String("type", "CLIENT_RECEIVED_MSG_ACK"))

	// æ³¨å†Œæ’¤å›æ¶ˆæ¯ç­–ç•¥
	withdrawStrategy := strategy.NewWithdrawMsgStrategy(h.config, h.logger, h.channelManager)
	h.strategies[pb.MsgType_WITHDRAW_MSG_SEND] = withdrawStrategy
	h.logger.Info("æ³¨å†Œæ¶ˆæ¯å¤„ç†ç­–ç•¥", zap.String("type", "WITHDRAW_MSG_SEND"))

	// TODO: æ·»åŠ å…¶ä»–æ¶ˆæ¯ç±»å‹ç­–ç•¥
	// - ç¾¤èŠæ¶ˆæ¯
	// - æ–‡ä»¶ä¼ è¾“
	// - ç³»ç»Ÿé€šçŸ¥
	// ç­‰ç­‰...
}

// HandleBinaryMessage å¤„ç†äºŒè¿›åˆ¶æ¶ˆæ¯ï¼ˆå¯¹æ ‡ Java WebSocketServerHandler BinaryWebSocketFrame å¤„ç†ï¼‰
func (h *MessageHandler) HandleBinaryMessage(conn channel.Connection, message []byte) {
	startTime := time.Now()

	// æ¶ˆæ¯é•¿åº¦æ£€æŸ¥ï¼ˆå¯¹æ ‡ Java MAX_MESSAGE_LENGTHï¼‰
	nettyConfig := h.config.GetNettyRuntimeConfig()
	if len(message) > int(nettyConfig.MaxMessageSize) {
		h.logger.Warn("æ¶ˆæ¯é•¿åº¦è¶…è¿‡é™åˆ¶",
			zap.String("user_id", conn.GetUserID()),
			zap.Int("message_size", len(message)),
			zap.Int64("max_size", nettyConfig.MaxMessageSize),
		)
		h.messageStats.TotalErrors++
		return
	}

	// å¼‚æ­¥å¤„ç†æ¨¡å¼ï¼ˆå¯é€‰ä¼˜åŒ–ï¼‰
	if h.workerCount > 0 {
		task := &MessageTask{
			Connection: conn,
			Message:    message,
			ReceivedAt: time.Now(),
		}

		select {
		case h.messageQueue <- task:
			// æ¶ˆæ¯å·²åŠ å…¥é˜Ÿåˆ—
		default:
			// é˜Ÿåˆ—æ»¡ï¼Œç›´æ¥å¤„ç†
			h.logger.Warn("æ¶ˆæ¯é˜Ÿåˆ—å·²æ»¡ï¼Œç›´æ¥å¤„ç†",
				zap.String("user_id", conn.GetUserID()),
			)
			h.processBinaryMessage(conn, message, startTime)
		}
	} else {
		// åŒæ­¥å¤„ç†æ¨¡å¼
		h.processBinaryMessage(conn, message, startTime)
	}
}

// processBinaryMessage å¤„ç†äºŒè¿›åˆ¶æ¶ˆæ¯çš„å…·ä½“é€»è¾‘
func (h *MessageHandler) processBinaryMessage(conn channel.Connection, message []byte, startTime time.Time) {
	defer func() {
		// è®°å½•å¤„ç†æ—¶é—´
		processingTime := time.Since(startTime).Milliseconds()
		h.messageStats.ProcessingTime = (h.messageStats.ProcessingTime + processingTime) / 2 // ç®€å•å¹³å‡
	}()

	// 1. è§£æ Protobuf æ¶ˆæ¯ï¼ˆå¯¹æ ‡ Java ImProtoRequest.parseFromï¼‰
	protoRequest := &pb.ImProtoRequest{}
	if err := proto.Unmarshal(message, protoRequest); err != nil {
		h.logger.Error("è§£æ Protobuf æ¶ˆæ¯å¤±è´¥",
			zap.String("user_id", conn.GetUserID()),
			zap.Error(err),
			zap.Int("message_size", len(message)),
		)
		h.messageStats.TotalErrors++
		return
	}

	h.logger.Debug("æ”¶åˆ° Protobuf æ¶ˆæ¯",
		zap.String("user_id", conn.GetUserID()),
		zap.String("msg_type", protoRequest.Type.String()),
		zap.Int("payload_size", len(protoRequest.Payload)),
	)

	// 2. æŸ¥æ‰¾å¤„ç†ç­–ç•¥ï¼ˆå¯¹æ ‡ Java HandlerDispatcher.dispatcherï¼‰
	msgStrategy, exists := h.strategies[protoRequest.Type]
	if !exists {
		h.logger.Warn("æœªæ‰¾åˆ°æ¶ˆæ¯å¤„ç†ç­–ç•¥",
			zap.String("user_id", conn.GetUserID()),
			zap.String("msg_type", protoRequest.Type.String()),
		)
		h.messageStats.TotalErrors++
		return
	}

	// 3. æ‰§è¡Œæ¶ˆæ¯å¤„ç†ç­–ç•¥ï¼ˆå¯¹æ ‡ Java ProtoMsgHandlerStrategy.exchangeï¼‰
	if err := msgStrategy.Exchange(conn, protoRequest); err != nil {
		h.logger.Error("æ¶ˆæ¯å¤„ç†å¤±è´¥",
			zap.String("user_id", conn.GetUserID()),
			zap.String("msg_type", protoRequest.Type.String()),
			zap.Error(err),
		)
		h.messageStats.TotalErrors++
		return
	}

	// 4. æ›´æ–°ç»Ÿè®¡ä¿¡æ¯
	h.messageStats.TotalProcessed++
	h.updateMessageTypeStats(protoRequest.Type)

	h.logger.Debug("æ¶ˆæ¯å¤„ç†å®Œæˆ",
		zap.String("user_id", conn.GetUserID()),
		zap.String("msg_type", protoRequest.Type.String()),
		zap.Duration("processing_time", time.Since(startTime)),
	)
}

// updateMessageTypeStats æ›´æ–°æ¶ˆæ¯ç±»å‹ç»Ÿè®¡
func (h *MessageHandler) updateMessageTypeStats(msgType pb.MsgType) {
	switch msgType {
	case pb.MsgType_C2C_SEND:
		h.messageStats.C2CMessages++
	case pb.MsgType_CLIENT_RECEIVED_MSG_ACK:
		h.messageStats.AckMessages++
	case pb.MsgType_HEARTBEAT:
		h.messageStats.Heartbeats++
	}
}

// startWorkers å¯åŠ¨å¼‚æ­¥å¤„ç†worker
func (h *MessageHandler) startWorkers() {
	if h.workerCount <= 0 {
		return
	}

	for i := 0; i < h.workerCount; i++ {
		go h.messageWorker(i)
	}

	h.logger.Info("ğŸš€ æ¶ˆæ¯å¤„ç†workerå¯åŠ¨",
		zap.Int("worker_count", h.workerCount),
	)
}

// messageWorker æ¶ˆæ¯å¤„ç†workeråç¨‹
func (h *MessageHandler) messageWorker(workerID int) {
	h.logger.Debug("æ¶ˆæ¯å¤„ç†workerå¯åŠ¨",
		zap.Int("worker_id", workerID),
	)

	for task := range h.messageQueue {
		// æ£€æŸ¥æ¶ˆæ¯æ˜¯å¦è¿‡æœŸï¼ˆå¯é€‰ï¼‰
		if time.Since(task.ReceivedAt) > 30*time.Second {
			h.logger.Warn("æ¶ˆæ¯å¤„ç†è¶…æ—¶ï¼Œä¸¢å¼ƒ",
				zap.String("user_id", task.Connection.GetUserID()),
				zap.Duration("age", time.Since(task.ReceivedAt)),
			)
			h.messageStats.TotalErrors++
			continue
		}

		// å¤„ç†æ¶ˆæ¯
		h.processBinaryMessage(task.Connection, task.Message, task.ReceivedAt)
	}

	h.logger.Debug("æ¶ˆæ¯å¤„ç†workeråœæ­¢",
		zap.Int("worker_id", workerID),
	)
}

// HandleCrossServerMessage å¤„ç†è·¨æœåŠ¡å™¨æ¶ˆæ¯ï¼ˆå¯¹æ ‡ Java TransferC2CMsgService.transferC2CMsgï¼‰
func (h *MessageHandler) HandleCrossServerMessage(protoRequest *pb.ImProtoRequest) error {
	h.logger.Info("æ”¶åˆ°è·¨æœåŠ¡å™¨æ¶ˆæ¯",
		zap.String("msg_type", protoRequest.Type.String()),
		zap.Int("payload_size", len(protoRequest.Payload)),
	)

	// æŸ¥æ‰¾å¤„ç†ç­–ç•¥
	msgStrategy, exists := h.strategies[protoRequest.Type]
	if !exists {
		err := fmt.Errorf("æœªæ‰¾åˆ°è·¨æœåŠ¡å™¨æ¶ˆæ¯å¤„ç†ç­–ç•¥: %s", protoRequest.Type.String())
		h.logger.Error("è·¨æœåŠ¡å™¨æ¶ˆæ¯å¤„ç†å¤±è´¥", zap.Error(err))
		return err
	}

	// æ£€æŸ¥ç­–ç•¥æ˜¯å¦æ”¯æŒè·¨æœåŠ¡å™¨å¤„ç†
	crossServerStrategy, ok := msgStrategy.(strategy.CrossServerMessageHandler)
	if !ok {
		err := fmt.Errorf("ç­–ç•¥ä¸æ”¯æŒè·¨æœåŠ¡å™¨å¤„ç†: %s", protoRequest.Type.String())
		h.logger.Error("è·¨æœåŠ¡å™¨æ¶ˆæ¯å¤„ç†å¤±è´¥", zap.Error(err))
		return err
	}

	// æ‰§è¡Œè·¨æœåŠ¡å™¨æ¶ˆæ¯å¤„ç†
	return crossServerStrategy.ReceiveAndSendMsg(protoRequest)
}

// GetStats è·å–æ¶ˆæ¯å¤„ç†ç»Ÿè®¡ä¿¡æ¯
func (h *MessageHandler) GetStats() MessageStats {
	return h.messageStats
}

// Stop åœæ­¢æ¶ˆæ¯å¤„ç†å™¨
func (h *MessageHandler) Stop() {
	h.logger.Info("ğŸ”„ åœæ­¢æ¶ˆæ¯å¤„ç†å™¨...")

	// å…³é—­æ¶ˆæ¯é˜Ÿåˆ—
	close(h.messageQueue)

	// ç­‰å¾…æ‰€æœ‰æ¶ˆæ¯å¤„ç†å®Œæˆï¼ˆç®€å•ç­‰å¾…ï¼‰
	time.Sleep(2 * time.Second)

	h.logger.Info("âœ… æ¶ˆæ¯å¤„ç†å™¨å·²åœæ­¢")
}

// SendMessageToUser å‘ç”¨æˆ·å‘é€æ¶ˆæ¯ï¼ˆå·¥å…·æ–¹æ³•ï¼‰
func (h *MessageHandler) SendMessageToUser(userID string, msgType pb.MsgType, payload []byte) error {
	// æ„å»º Protobuf å“åº”
	response := &pb.ImProtoResponse{
		Type:    msgType,
		Payload: payload,
		Code:    pb.ProtoResponseCode_SUCCESS,
	}

	// åºåˆ—åŒ–æ¶ˆæ¯
	responseData, err := proto.Marshal(response)
	if err != nil {
		return fmt.Errorf("åºåˆ—åŒ–å“åº”æ¶ˆæ¯å¤±è´¥: %w", err)
	}

	// å‘é€ç»™ç”¨æˆ·
	if err := h.channelManager.BroadcastToUser(userID, responseData); err != nil {
		return fmt.Errorf("å‘é€æ¶ˆæ¯ç»™ç”¨æˆ·å¤±è´¥: %w", err)
	}

	h.logger.Debug("æ¶ˆæ¯å·²å‘é€ç»™ç”¨æˆ·",
		zap.String("user_id", userID),
		zap.String("msg_type", msgType.String()),
		zap.Int("message_size", len(responseData)),
	)

	return nil
}

// BroadcastMessage å¹¿æ’­æ¶ˆæ¯ç»™æ‰€æœ‰åœ¨çº¿ç”¨æˆ·ï¼ˆå·¥å…·æ–¹æ³•ï¼‰
func (h *MessageHandler) BroadcastMessage(msgType pb.MsgType, payload []byte) error {
	// æ„å»º Protobuf å“åº”
	response := &pb.ImProtoResponse{
		Type:    msgType,
		Payload: payload,
		Code:    pb.ProtoResponseCode_SUCCESS,
	}

	// åºåˆ—åŒ–æ¶ˆæ¯
	responseData, err := proto.Marshal(response)
	if err != nil {
		return fmt.Errorf("åºåˆ—åŒ–å¹¿æ’­æ¶ˆæ¯å¤±è´¥: %w", err)
	}

	// è·å–æ‰€æœ‰åœ¨çº¿ç”¨æˆ·
	onlineUsers := h.channelManager.GetOnlineUsers()

	successCount := 0
	errorCount := 0

	// å‘é€ç»™æ‰€æœ‰åœ¨çº¿ç”¨æˆ·
	for _, userID := range onlineUsers {
		if err := h.channelManager.BroadcastToUser(userID, responseData); err != nil {
			h.logger.Warn("å¹¿æ’­æ¶ˆæ¯å¤±è´¥",
				zap.String("user_id", userID),
				zap.Error(err),
			)
			errorCount++
		} else {
			successCount++
		}
	}

	h.logger.Info("æ¶ˆæ¯å¹¿æ’­å®Œæˆ",
		zap.String("msg_type", msgType.String()),
		zap.Int("total_users", len(onlineUsers)),
		zap.Int("success_count", successCount),
		zap.Int("error_count", errorCount),
		zap.Int("message_size", len(responseData)),
	)

	return nil
}

// GetQueueStatus è·å–é˜Ÿåˆ—çŠ¶æ€ï¼ˆç›‘æ§ç”¨ï¼‰
func (h *MessageHandler) GetQueueStatus() QueueStatus {
	return QueueStatus{
		QueueSize:     len(h.messageQueue),
		QueueCapacity: cap(h.messageQueue),
		WorkerCount:   h.workerCount,
	}
}

// QueueStatus é˜Ÿåˆ—çŠ¶æ€
type QueueStatus struct {
	QueueSize     int `json:"queue_size"`
	QueueCapacity int `json:"queue_capacity"`
	WorkerCount   int `json:"worker_count"`
}

// HandleHeartbeat å¤„ç†å¿ƒè·³æ¶ˆæ¯ï¼ˆç‰¹æ®Šå¤„ç†ï¼‰
func (h *MessageHandler) HandleHeartbeat(conn channel.Connection) error {
	h.messageStats.Heartbeats++

	h.logger.Debug("æ”¶åˆ°å¿ƒè·³",
		zap.String("user_id", conn.GetUserID()),
	)

	// å‘é€ Pong å“åº”
	return conn.SendPong([]byte("heartbeat"))
}

// æ¶ˆæ¯éªŒè¯ç›¸å…³æ–¹æ³•

// ValidateMessage éªŒè¯æ¶ˆæ¯æ ¼å¼å’Œå†…å®¹
func (h *MessageHandler) ValidateMessage(protoRequest *pb.ImProtoRequest) error {
	// 1. æ£€æŸ¥æ¶ˆæ¯ç±»å‹æ˜¯å¦æ”¯æŒ
	_, exists := h.strategies[protoRequest.Type]
	if !exists {
		return fmt.Errorf("ä¸æ”¯æŒçš„æ¶ˆæ¯ç±»å‹: %s", protoRequest.Type.String())
	}

	// 2. æ£€æŸ¥ Payload æ˜¯å¦ä¸ºç©º
	if len(protoRequest.Payload) == 0 {
		return fmt.Errorf("æ¶ˆæ¯è´Ÿè½½ä¸ºç©º")
	}

	// 3. æ£€æŸ¥ Payload å¤§å°
	nettyConfig := h.config.GetNettyRuntimeConfig()
	if len(protoRequest.Payload) > int(nettyConfig.MaxMessageSize) {
		return fmt.Errorf("æ¶ˆæ¯è´Ÿè½½è¿‡å¤§: %d > %d", len(protoRequest.Payload), nettyConfig.MaxMessageSize)
	}

	// 4. å¯ä»¥æ·»åŠ æ›´å¤šéªŒè¯é€»è¾‘
	// - æ¶ˆæ¯å†…å®¹æ ¼å¼éªŒè¯
	// - ç”¨æˆ·æƒé™éªŒè¯
	// - é¢‘ç‡é™åˆ¶éªŒè¯
	// ç­‰ç­‰...

	return nil
}

// æ€§èƒ½ä¼˜åŒ–ç›¸å…³æ–¹æ³•

// FlushPendingMessages åˆ·æ–°å¾…å¤„ç†æ¶ˆæ¯ï¼ˆæ‰¹é‡å¤„ç†ä¼˜åŒ–ï¼‰
func (h *MessageHandler) FlushPendingMessages() {
	// è¿™é‡Œå¯ä»¥å®ç°æ‰¹é‡æ¶ˆæ¯å¤„ç†é€»è¾‘
	// ä¾‹å¦‚ï¼šå°†å¤šä¸ªå°æ¶ˆæ¯åˆå¹¶ä¸ºä¸€ä¸ªå¤§æ¶ˆæ¯å‘é€
	// æˆ–è€…ï¼šæ‰¹é‡å†™å…¥æ•°æ®åº“

	h.logger.Debug("åˆ·æ–°å¾…å¤„ç†æ¶ˆæ¯")
}

// OptimizeMemoryUsage ä¼˜åŒ–å†…å­˜ä½¿ç”¨
func (h *MessageHandler) OptimizeMemoryUsage() {
	// è¿™é‡Œå¯ä»¥å®ç°å†…å­˜ä¼˜åŒ–é€»è¾‘
	// ä¾‹å¦‚ï¼šæ¸…ç†è¿‡æœŸçš„æ¶ˆæ¯ç¼“å­˜
	// æˆ–è€…ï¼šå‹ç¼©æ¶ˆæ¯æ•°æ®

	h.logger.Debug("ä¼˜åŒ–å†…å­˜ä½¿ç”¨")
}
