package server

import (
	"context"
	"fmt"
	"net/http"
	"sync"
	"time"

	"im-connect-go/internal/auth"
	"im-connect-go/internal/channel"
	"im-connect-go/internal/config"
	"im-connect-go/internal/handler"
	"im-connect-go/internal/metrics"
	pb "im-connect-go/internal/proto"
	"im-connect-go/internal/service"
	"im-connect-go/pkg/mq"
	"im-connect-go/pkg/redis"

	"github.com/lesismal/nbio/nbhttp"
	"github.com/lesismal/nbio/nbhttp/websocket"
	"go.uber.org/zap"
	"google.golang.org/protobuf/proto"
)

// NbioWebSocketServer nbio ç‰ˆæœ¬çš„ WebSocket æœåŠ¡å™¨
// ä½¿ç”¨ nbio çš„é«˜æ€§èƒ½ç½‘ç»œåº“ï¼ŒåŸç”Ÿæ”¯æŒ WebSocketï¼Œæ”¯æŒç™¾ä¸‡çº§è¿æ¥
type NbioWebSocketServer struct {
	config            *config.Config
	logger            *zap.Logger
	server            *nbhttp.Server
	channelManager    *channel.NbioManager
	authHandler       *auth.Handler
	messageHandler    *handler.MessageHandler
	userStatusService *service.UserStatusService

	// è¿æ¥æ˜ å°„ï¼šwebsocket.Conn -> userID
	connUserMap sync.Map // map[*websocket.Conn]string

	// è¿æ¥å»ºç«‹æ—¶é—´æ˜ å°„ï¼šuserID -> time.Time
	connectTimeMap sync.Map // map[string]time.Time

	// ä¼˜åŒ–ç»„ä»¶
	advancedHeartbeatHandler *handler.AdvancedHeartbeatHandler
	asyncMessageHandler      *handler.AsyncMessageHandler
	connectionStats          *metrics.ConnectionStats

	// ä¼˜é›…å…³é—­
	shutdown     chan struct{}
	shutdownOnce sync.Once
}

// NewNbioWebSocketServer åˆ›å»ºæ–°çš„ nbio WebSocket æœåŠ¡å™¨
func NewNbioWebSocketServer(cfg *config.Config, logger *zap.Logger, mqProducer *mq.Producer, redisClient *redis.RedisClient) (*NbioWebSocketServer, error) {
	nettyConfig := cfg.GetNettyRuntimeConfig()

	// åˆ›å»ºè¿æ¥ç®¡ç†å™¨
	channelManager := channel.NewNbioManager(cfg, logger)

	// åˆ›å»ºè®¤è¯å¤„ç†å™¨
	authHandler := auth.NewHandler(cfg, logger)

	// åˆ›å»ºæ¶ˆæ¯å¤„ç†å™¨ï¼ˆnbio ç‰ˆæœ¬ï¼Œä¼ å…¥ channelManagerï¼‰
	messageHandler := handler.NewMessageHandler(cfg, logger, channelManager, mqProducer, redisClient)

	// åˆ›å»ºç”¨æˆ·çŠ¶æ€ç®¡ç†æœåŠ¡
	serverAddr := getServerAddress(cfg)
	userStatusService := service.NewUserStatusService(redisClient, logger, serverAddr)

	// åˆ›å»º HTTP å¤šè·¯å¤ç”¨å™¨
	mux := http.NewServeMux()

	server := &NbioWebSocketServer{
		config:            cfg,
		logger:            logger,
		channelManager:    channelManager,
		authHandler:       authHandler,
		messageHandler:    messageHandler,
		userStatusService: userStatusService,
		shutdown:          make(chan struct{}),
	}

	// è®¾ç½® WebSocket è·¯ç”±
	mux.HandleFunc("/websocket", server.handleWebSocket)

	// åˆ›å»º nbio HTTP æœåŠ¡å™¨
	nbServer := nbhttp.NewServer(nbhttp.Config{
		Network:            "tcp",
		Addrs:              []string{fmt.Sprintf(":%d", cfg.Server.Port)},
		MaxWriteBufferSize: nettyConfig.SocketBufferSize,
		ReadBufferSize:     nettyConfig.SocketBufferSize,
		NPoller:            nettyConfig.WorkerThreads,
		Handler:            mux,
	})

	server.server = nbServer

	// åˆå§‹åŒ–ä¼˜åŒ–ç»„ä»¶
	advancedHeartbeatHandler := handler.NewAdvancedHeartbeatHandler(cfg, logger, channelManager)
	asyncMessageHandler := handler.NewAsyncMessageHandler(cfg, logger, messageHandler, 10000, 16)
	connectionStats := metrics.NewConnectionStats()

	server.advancedHeartbeatHandler = advancedHeartbeatHandler
	server.asyncMessageHandler = asyncMessageHandler
	server.connectionStats = connectionStats

	logger.Info("âœ… nbio WebSocket æœåŠ¡å™¨åˆå§‹åŒ–å®Œæˆ",
		zap.String("address", fmt.Sprintf(":%d", cfg.Server.Port)),
		zap.Int("npoller", nettyConfig.WorkerThreads),
		zap.Int("max_write_buffer", nettyConfig.SocketBufferSize),
		zap.String("heartbeat_handler", "advanced"),
		zap.String("message_handler", "async"),
	)

	return server, nil
}

// handleWebSocket å¤„ç† WebSocket è¿æ¥
func (s *NbioWebSocketServer) handleWebSocket(w http.ResponseWriter, r *http.Request) {
	// 1. è®¤è¯æ£€æŸ¥
	userID, err := s.authHandler.Authenticate(r)
	if err != nil {
		s.logger.Warn("WebSocket è®¤è¯å¤±è´¥",
			zap.String("remote_addr", r.RemoteAddr),
			zap.Error(err),
		)
		http.Error(w, "è®¤è¯å¤±è´¥", http.StatusUnauthorized)
		return
	}

	// 2. è¿æ¥æ•°é™åˆ¶æ£€æŸ¥
	if !s.channelManager.CanAcceptConnection(userID) {
		s.logger.Warn("è¿æ¥æ•°è¶…è¿‡é™åˆ¶",
			zap.String("user_id", userID),
			zap.String("remote_addr", r.RemoteAddr),
		)
		http.Error(w, "è¿æ¥æ•°è¶…è¿‡é™åˆ¶", http.StatusTooManyRequests)
		return
	}

	// 3. å‡çº§ä¸º WebSocket è¿æ¥
	upgrader := websocket.NewUpgrader()

	// è®¾ç½®è¿æ¥å±æ€§
	nettyConfig := s.config.GetNettyRuntimeConfig()
	heartbeatTimeout := time.Duration(nettyConfig.HeartbeatTimeout) * time.Second

	// è®¾ç½® OnOpen å›è°ƒ
	upgrader.OnOpen(func(c *websocket.Conn) {
		// è®¾ç½®è¯»å–è¶…æ—¶ï¼ˆå¿ƒè·³æ£€æµ‹ï¼‰
		c.SetReadDeadline(time.Now().Add(heartbeatTimeout))

		// å­˜å‚¨è¿æ¥æ˜ å°„
		s.connUserMap.Store(c, userID)

		// è®°å½•è¿æ¥å»ºç«‹æ—¶é—´ï¼ˆå¯¹æ ‡ Java NettyAttrUtil.setConnectTimeï¼‰
		connectTime := time.Now()
		s.connectTimeMap.Store(userID, connectTime)

		// æ³¨å†Œè¿æ¥åŒ…è£…å™¨
		s.channelManager.RegisterConnection(nil, c, userID)

		// è®¾ç½®ç”¨æˆ·åœ¨çº¿çŠ¶æ€åˆ° Redis
		if err := s.userStatusService.UserConnectSuccessAfter(userID); err != nil {
			s.logger.Error("è®¾ç½®ç”¨æˆ·åœ¨çº¿çŠ¶æ€å¤±è´¥",
				zap.String("user_id", userID),
				zap.Error(err),
			)
			c.Close()
			return
		}

		// è®°å½•è¿æ¥å»ºç«‹ç»Ÿè®¡
		s.connectionStats.OnConnect()

		// åˆå§‹åŒ–å¿ƒè·³è®°å½•
		s.advancedHeartbeatHandler.OnRead(userID)

		s.logger.Info("âœ… WebSocket è¿æ¥å»ºç«‹",
			zap.String("user_id", userID),
			zap.String("remote_addr", c.RemoteAddr().String()),
			zap.Int64("total_connections", s.channelManager.GetConnectionCount()),
		)
	})

	// è®¾ç½® OnMessage å›è°ƒ
	upgrader.OnMessage(func(c *websocket.Conn, messageType websocket.MessageType, data []byte) {
		// æ›´æ–°å¿ƒè·³æ—¶é—´
		c.SetReadDeadline(time.Now().Add(heartbeatTimeout))

		// è·å–ç”¨æˆ·ID
		userIDInterface, ok := s.connUserMap.Load(c)
		if !ok {
			return
		}
		currentUserID := userIDInterface.(string)

		// æ›´æ–°æ´»è·ƒåº¦ï¼ˆå¯¹æ ‡ Java IdleStateHandlerï¼‰
		s.advancedHeartbeatHandler.OnRead(currentUserID)

		switch messageType {
		case websocket.BinaryMessage:
			// å¤„ç†äºŒè¿›åˆ¶æ¶ˆæ¯ï¼ˆProtobufï¼‰- ä½¿ç”¨å¼‚æ­¥å¤„ç†ï¼ˆå¯¹æ ‡ Java ThreadPoolTaskExecutorï¼‰
			if connWrapper := s.channelManager.GetConnection(currentUserID, c); connWrapper != nil {
				if !s.asyncMessageHandler.Submit(currentUserID, connWrapper, data) {
					s.logger.Warn("âš ï¸ æ¶ˆæ¯å¤„ç†é˜Ÿåˆ—æ»¡ï¼Œæ¶ˆæ¯è¢«ä¸¢å¼ƒ",
						zap.String("user_id", currentUserID),
						zap.Int("queue_length", s.asyncMessageHandler.GetQueueLength()),
					)
				} else {
					// è®°å½•æ¶ˆæ¯ç»Ÿè®¡
					s.connectionStats.OnMessage(len(data))
				}
			}

		case websocket.TextMessage:
			s.logger.Debug("æ”¶åˆ°æ–‡æœ¬æ¶ˆæ¯",
				zap.String("user_id", currentUserID),
				zap.String("message", string(data)),
			)

		case websocket.PingMessage:
			s.logger.Debug("æ”¶åˆ° Ping æ¶ˆæ¯",
				zap.String("user_id", currentUserID),
			)
			// nbio websocket ä¼šè‡ªåŠ¨å›å¤ Pong

		case websocket.PongMessage:
			s.logger.Debug("æ”¶åˆ° Pong æ¶ˆæ¯",
				zap.String("user_id", currentUserID),
			)

		case websocket.CloseMessage:
			s.logger.Info("æ”¶åˆ°å…³é—­æ¶ˆæ¯",
				zap.String("user_id", currentUserID),
			)
		}
	})

	// è®¾ç½® OnClose å›è°ƒ
	upgrader.OnClose(func(c *websocket.Conn, err error) {
		s.handleWebSocketClose(c, err)
	})

	// æ‰§è¡Œå‡çº§
	conn, err := upgrader.Upgrade(w, r, nil)
	if err != nil {
		s.logger.Error("WebSocket å‡çº§å¤±è´¥",
			zap.String("user_id", userID),
			zap.Error(err),
		)
		return
	}

	// è¿æ¥å·²å»ºç«‹ï¼Œå›è°ƒä¼šè‡ªåŠ¨å¤„ç†
	_ = conn
}

// handleWebSocketClose å¤„ç† WebSocket è¿æ¥å…³é—­
func (s *NbioWebSocketServer) handleWebSocketClose(c *websocket.Conn, err error) {
	// è·å–ç”¨æˆ·ID
	userIDInterface, ok := s.connUserMap.LoadAndDelete(c)
	if !ok {
		s.logger.Debug("è¿æ¥å…³é—­ï¼ˆæœªæ‰¾åˆ°ç”¨æˆ·æ˜ å°„ï¼‰",
			zap.String("remote_addr", c.RemoteAddr().String()),
		)
		return
	}

	userID := userIDInterface.(string)

	// è®¡ç®—è¿æ¥æ—¶é•¿ï¼ˆå¯¹æ ‡ Java çš„è¿æ¥æ—¶é•¿ç»Ÿè®¡ï¼‰
	var connectionDuration time.Duration
	if connectTimeInterface, ok := s.connectTimeMap.LoadAndDelete(userID); ok {
		connectTime := connectTimeInterface.(time.Time)
		connectionDuration = time.Since(connectTime)
	}

	// ä»è¿æ¥ç®¡ç†å™¨ç§»é™¤
	s.channelManager.RemoveConnection(userID, c)

	// æ¸…é™¤ç”¨æˆ·åœ¨çº¿çŠ¶æ€ï¼ˆä»…å½“ç”¨æˆ·æ‰€æœ‰è¿æ¥éƒ½å…³é—­æ—¶ï¼‰
	if !s.channelManager.IsUserOnline(userID) {
		if err := s.userStatusService.UserDisconnectAfter(userID); err != nil {
			s.logger.Error("æ¸…é™¤ç”¨æˆ·åœ¨çº¿çŠ¶æ€å¤±è´¥",
				zap.String("user_id", userID),
				zap.Error(err),
			)
		}
	}

	// è®°å½•æ–­å¼€ç»Ÿè®¡
	s.connectionStats.OnDisconnect(connectionDuration)

	s.logger.Info("âŒ WebSocket è¿æ¥å…³é—­",
		zap.String("user_id", userID),
		zap.String("remote_addr", c.RemoteAddr().String()),
		zap.Duration("connection_duration", connectionDuration),
		zap.Error(err),
		zap.Int64("remaining_connections", s.channelManager.GetConnectionCount()),
	)
}

// Start å¯åŠ¨ WebSocket æœåŠ¡å™¨
func (s *NbioWebSocketServer) Start(ctx context.Context) error {
	// å¯åŠ¨ nbio HTTP æœåŠ¡å™¨
	if err := s.server.Start(); err != nil {
		return fmt.Errorf("å¯åŠ¨ nbio æœåŠ¡å™¨å¤±è´¥: %w", err)
	}

	s.logger.Info("ğŸ¯ nbio WebSocket æœåŠ¡å™¨å¯åŠ¨æˆåŠŸ",
		zap.String("address", fmt.Sprintf(":%d", s.config.Server.Port)),
		zap.Int("npoller", s.config.GetNettyRuntimeConfig().WorkerThreads),
	)

	// ç­‰å¾…å…³é—­ä¿¡å·
	select {
	case <-ctx.Done():
		return nil
	case <-s.shutdown:
		return nil
	}
}

// Shutdown ä¼˜é›…å…³é—­æœåŠ¡å™¨
func (s *NbioWebSocketServer) Shutdown(ctx context.Context) error {
	var err error
	s.shutdownOnce.Do(func() {
		s.logger.Info("ğŸ”„ å¼€å§‹å…³é—­ nbio WebSocket æœåŠ¡å™¨...")

		// é€šçŸ¥æ‰€æœ‰åç¨‹å…³é—­
		close(s.shutdown)

		// å…³é—­å¼‚æ­¥æ¶ˆæ¯å¤„ç†å™¨ï¼ˆç­‰å¾…é˜Ÿåˆ—å¤„ç†å®Œæˆï¼‰
		s.logger.Info("å…³é—­å¼‚æ­¥æ¶ˆæ¯å¤„ç†å™¨...")
		s.asyncMessageHandler.Shutdown(ctx)

		// å…³é—­é«˜çº§å¿ƒè·³å¤„ç†å™¨
		s.logger.Info("å…³é—­é«˜çº§å¿ƒè·³å¤„ç†å™¨...")
		s.advancedHeartbeatHandler.Shutdown()

		// å…³é—­æ‰€æœ‰è¿æ¥
		s.channelManager.CloseAllConnections()

		// åœæ­¢ nbio æœåŠ¡å™¨
		s.server.Stop()

		// è¾“å‡ºæœ€ç»ˆç»Ÿè®¡ä¿¡æ¯
		s.logger.Info("ğŸ“Š æœ€ç»ˆç»Ÿè®¡ä¿¡æ¯",
			zap.Any("connection_stats", s.connectionStats.GetStats()),
			zap.Any("heartbeat_stats", s.advancedHeartbeatHandler.GetStats()),
			zap.Any("message_handler_stats", s.asyncMessageHandler.GetStats()),
		)

		s.logger.Info("âœ… nbio WebSocket æœåŠ¡å™¨å…³é—­å®Œæˆ")
	})

	return err
}

// handleBinaryMessage å¤„ç†äºŒè¿›åˆ¶æ¶ˆæ¯ï¼ˆé€‚é… MessageHandlerï¼‰
func (s *NbioWebSocketServer) handleBinaryMessage(conn channel.Connection, message []byte) {
	userID := conn.GetUserID()

	// è§£æ Protobuf æ¶ˆæ¯
	protoRequest := &pb.ImProtoRequest{}
	if err := proto.Unmarshal(message, protoRequest); err != nil {
		s.logger.Error("è§£æ Protobuf æ¶ˆæ¯å¤±è´¥",
			zap.String("user_id", userID),
			zap.Error(err),
		)
		return
	}

	s.logger.Debug("å¤„ç†äºŒè¿›åˆ¶æ¶ˆæ¯",
		zap.String("user_id", userID),
		zap.String("msg_type", protoRequest.Type.String()),
		zap.Int("message_size", len(message)),
	)

	// è°ƒç”¨ MessageHandler å¤„ç†æ¶ˆæ¯
	if err := s.messageHandler.HandleBinaryMessage(conn, message); err != nil {
		s.logger.Error("æ¶ˆæ¯å¤„ç†å¤±è´¥",
			zap.String("user_id", userID),
			zap.String("msg_type", protoRequest.Type.String()),
			zap.Error(err),
		)
	}
}

// GetStats è·å–æœåŠ¡å™¨ç»Ÿè®¡ä¿¡æ¯
func (s *NbioWebSocketServer) GetStats() map[string]interface{} {
	return map[string]interface{}{
		"connections": s.channelManager.GetConnectionCount(),
		"uptime":      time.Since(time.Now()).String(),
		"start_time":  time.Now(),
	}
}

// getServerAddress è·å–æœåŠ¡å™¨åœ°å€
func getServerAddress(cfg *config.Config) string {
	if cfg.Server.Host != "" {
		return fmt.Sprintf("%s:%d", cfg.Server.Host, cfg.GRPC.Port)
	}
	return fmt.Sprintf("localhost:%d", cfg.GRPC.Port)
}
