package service

import (
	"context"
	"fmt"
	"sync"
	"time"

	"im-connect-go/internal/channel"
	"im-connect-go/internal/config"
	pb "im-connect-go/internal/proto"
	"im-connect-go/pkg/redis"

	"go.uber.org/zap"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
	"google.golang.org/protobuf/proto"
)

// TransferC2CMsgService è·¨æœåŠ¡å™¨æ¶ˆæ¯è½¬å‘æœåŠ¡
// å¯¹æ ‡ Java TransferC2CMsgServiceImpl
// åŠŸèƒ½ï¼š
// 1. å½“æ¥æ”¶è€…ä¸åœ¨æœ¬åœ°æœåŠ¡å™¨æ—¶ï¼Œè½¬å‘æ¶ˆæ¯åˆ°ç›®æ ‡æœåŠ¡å™¨
// 2. é€šè¿‡gRPCè°ƒç”¨ç›®æ ‡æœåŠ¡å™¨çš„æ¨é€æ¥å£
// 3. è¿æ¥æ± ç®¡ç†ï¼Œå¤ç”¨gRPCè¿æ¥
type TransferC2CMsgService struct {
	config         *config.Config
	logger         *zap.Logger
	channelManager *channel.NbioManager

	// gRPCå®¢æˆ·ç«¯è¿æ¥æ± 
	clientPool  sync.Map // serverAddr -> *grpc.ClientConn
	clientMutex sync.Mutex

	// æœ¬åœ°æœåŠ¡å™¨åœ°å€
	localServerAddr string

	// ç»Ÿè®¡
	totalTransferred int64
	successCount     int64
	failureCount     int64
}

// NewTransferC2CMsgService åˆ›å»ºè·¨æœåŠ¡å™¨æ¶ˆæ¯è½¬å‘æœåŠ¡
func NewTransferC2CMsgService(cfg *config.Config, logger *zap.Logger, channelManager *channel.NbioManager, localAddr string) *TransferC2CMsgService {
	service := &TransferC2CMsgService{
		config:          cfg,
		logger:          logger,
		channelManager:  channelManager,
		localServerAddr: localAddr,
	}

	logger.Info("âœ… è·¨æœåŠ¡å™¨æ¶ˆæ¯è½¬å‘æœåŠ¡åˆå§‹åŒ–å®Œæˆ",
		zap.String("local_server", localAddr),
	)

	return service
}

// TransferMessage è½¬å‘æ¶ˆæ¯åˆ°ç›®æ ‡æœåŠ¡å™¨
// å¯¹æ ‡ Java TransferC2CMsgServiceImpl.transferC2cMsgToTargetServer
func (s *TransferC2CMsgService) TransferMessage(ctx context.Context, toUserID string, message *pb.C2CMsgPush) error {
	s.totalTransferred++

	// 1. æŸ¥è¯¢æ¥æ”¶è€…æ‰€åœ¨æœåŠ¡å™¨
	targetServer, err := s.getTargetServer(toUserID)
	if err != nil {
		s.failureCount++
		return fmt.Errorf("è·å–ç›®æ ‡æœåŠ¡å™¨å¤±è´¥: %w", err)
	}

	// 2. å¦‚æœåœ¨æœ¬åœ°æœåŠ¡å™¨ï¼Œç›´æ¥å‘é€
	if targetServer == s.localServerAddr {
		return s.sendToLocalUser(toUserID, message)
	}

	// 3. è·¨æœåŠ¡å™¨è½¬å‘
	err = s.transferToRemoteServer(ctx, targetServer, toUserID, message)
	if err != nil {
		s.failureCount++
		return err
	}

	s.successCount++
	s.logger.Debug("æ¶ˆæ¯è·¨æœåŠ¡å™¨è½¬å‘æˆåŠŸ",
		zap.String("to_user", toUserID),
		zap.String("target_server", targetServer),
	)

	return nil
}

// getTargetServer è·å–ç”¨æˆ·æ‰€åœ¨çš„ç›®æ ‡æœåŠ¡å™¨
func (s *TransferC2CMsgService) getTargetServer(userID string) (string, error) {
	// ä»Redisè·å–ç”¨æˆ·æ‰€åœ¨æœåŠ¡å™¨ï¼ˆå¯¹æ ‡ Java ROUTE_PREFIXï¼‰
	serverAddr, err := redis.HGet("userLogin:server:", userID)
	if err != nil {
		return "", err
	}
	if serverAddr == "" {
		return "", fmt.Errorf("ç”¨æˆ· %s ä¸åœ¨çº¿", userID)
	}
	return serverAddr, nil
}

// sendToLocalUser å‘é€ç»™æœ¬åœ°ç”¨æˆ·
func (s *TransferC2CMsgService) sendToLocalUser(userID string, message *pb.C2CMsgPush) error {
	// æ„å»ºå“åº”
	response := &pb.ImProtoResponse{
		Type:    pb.MsgType_C2C_MSG_PUSH,
		Code:    pb.ProtoResponseCode_SUCCESS,
		Payload: mustMarshalProto(message),
	}

	responseData, err := proto.Marshal(response)
	if err != nil {
		return fmt.Errorf("åºåˆ—åŒ–æ¶ˆæ¯å¤±è´¥: %w", err)
	}

	return s.channelManager.BroadcastToUser(userID, responseData)
}

// transferToRemoteServer è½¬å‘åˆ°è¿œç¨‹æœåŠ¡å™¨
func (s *TransferC2CMsgService) transferToRemoteServer(ctx context.Context, targetServer, toUserID string, message *pb.C2CMsgPush) error {
	// 1. è·å–æˆ–åˆ›å»ºgRPCè¿æ¥
	client, err := s.getGRPCClient(targetServer)
	if err != nil {
		return fmt.Errorf("è·å–gRPCå®¢æˆ·ç«¯å¤±è´¥: %w", err)
	}

	// 2. æ„å»ºæ¨é€è¯·æ±‚ï¼ˆä½¿ç”¨ ServerAckPushï¼‰
	pushReq := &pb.ServerAckPush{
		ToUserId:          parseUint64(toUserID),
		ClientMsgId:       message.ClientMsgId,
		MsgId:             message.MsgId,
		MsgReceivedStatus: 1, // SERVER_RECEIVED
		ReceiveTime:       uint64(time.Now().UnixMilli()),
	}

	// 3. è°ƒç”¨è¿œç¨‹æœåŠ¡å™¨
	timeoutCtx, cancel := context.WithTimeout(ctx, 5*time.Second)
	defer cancel()

	resp, err := client.ResponseServerAck2Client(timeoutCtx, pushReq)
	if err != nil {
		// è¿æ¥å¯èƒ½å¤±æ•ˆï¼Œæ¸…é™¤ç¼“å­˜
		s.removeGRPCClient(targetServer)
		return fmt.Errorf("è°ƒç”¨è¿œç¨‹æœåŠ¡å™¨å¤±è´¥: %w", err)
	}

	if resp.Code != 0 {
		return fmt.Errorf("è¿œç¨‹æœåŠ¡å™¨è¿”å›é”™è¯¯: %s", resp.Message)
	}

	return nil
}

// getGRPCClient è·å–gRPCå®¢æˆ·ç«¯ï¼ˆå¸¦è¿æ¥æ± ï¼‰
func (s *TransferC2CMsgService) getGRPCClient(serverAddr string) (pb.MessageServiceClient, error) {
	// 1. å…ˆæŸ¥ç¼“å­˜
	if conn, ok := s.clientPool.Load(serverAddr); ok {
		return pb.NewMessageServiceClient(conn.(*grpc.ClientConn)), nil
	}

	// 2. åŠ é”åˆ›å»ºæ–°è¿æ¥
	s.clientMutex.Lock()
	defer s.clientMutex.Unlock()

	// åŒé‡æ£€æŸ¥
	if conn, ok := s.clientPool.Load(serverAddr); ok {
		return pb.NewMessageServiceClient(conn.(*grpc.ClientConn)), nil
	}

	// 3. åˆ›å»ºæ–°è¿æ¥
	conn, err := grpc.Dial(
		serverAddr,
		grpc.WithTransportCredentials(insecure.NewCredentials()),
		grpc.WithDefaultCallOptions(
			grpc.MaxCallRecvMsgSize(10*1024*1024), // 10MB
			grpc.MaxCallSendMsgSize(10*1024*1024),
		),
	)
	if err != nil {
		return nil, fmt.Errorf("åˆ›å»ºgRPCè¿æ¥å¤±è´¥: %w", err)
	}

	s.clientPool.Store(serverAddr, conn)
	s.logger.Info("åˆ›å»ºæ–°çš„gRPCè¿æ¥",
		zap.String("target_server", serverAddr),
	)

	return pb.NewMessageServiceClient(conn), nil
}

// removeGRPCClient ç§»é™¤gRPCå®¢æˆ·ç«¯ï¼ˆè¿æ¥å¤±æ•ˆæ—¶ï¼‰
func (s *TransferC2CMsgService) removeGRPCClient(serverAddr string) {
	if conn, ok := s.clientPool.LoadAndDelete(serverAddr); ok {
		conn.(*grpc.ClientConn).Close()
		s.logger.Info("ç§»é™¤å¤±æ•ˆçš„gRPCè¿æ¥",
			zap.String("target_server", serverAddr),
		)
	}
}

// TransferWithdrawMessage è½¬å‘æ’¤å›æ¶ˆæ¯
func (s *TransferC2CMsgService) TransferWithdrawMessage(ctx context.Context, toUserID string, notification *pb.MessageWithdrawNotification) error {
	// 1. æŸ¥è¯¢æ¥æ”¶è€…æ‰€åœ¨æœåŠ¡å™¨
	targetServer, err := s.getTargetServer(toUserID)
	if err != nil {
		return fmt.Errorf("è·å–ç›®æ ‡æœåŠ¡å™¨å¤±è´¥: %w", err)
	}

	// 2. å¦‚æœåœ¨æœ¬åœ°æœåŠ¡å™¨ï¼Œç›´æ¥å‘é€
	if targetServer == s.localServerAddr {
		return s.sendWithdrawToLocalUser(toUserID, notification)
	}

	// 3. è·¨æœåŠ¡å™¨è½¬å‘
	client, err := s.getGRPCClient(targetServer)
	if err != nil {
		return fmt.Errorf("è·å–gRPCå®¢æˆ·ç«¯å¤±è´¥: %w", err)
	}

	pushReq := &pb.WithdrawPush{
		ToUserId:   parseUint64(toUserID),
		MsgId:      notification.MsgId,
		FromUserId: notification.WithdrawnBy,
	}

	timeoutCtx, cancel := context.WithTimeout(ctx, 5*time.Second)
	defer cancel()

	resp, err := client.SendWithdrawMsg2Client(timeoutCtx, pushReq)
	if err != nil {
		s.removeGRPCClient(targetServer)
		return fmt.Errorf("è°ƒç”¨è¿œç¨‹æœåŠ¡å™¨å¤±è´¥: %w", err)
	}

	if resp.Code != 0 {
		return fmt.Errorf("è¿œç¨‹æœåŠ¡å™¨è¿”å›é”™è¯¯: %s", resp.Message)
	}

	return nil
}

// sendWithdrawToLocalUser å‘é€æ’¤å›é€šçŸ¥ç»™æœ¬åœ°ç”¨æˆ·
func (s *TransferC2CMsgService) sendWithdrawToLocalUser(userID string, notification *pb.MessageWithdrawNotification) error {
	response := &pb.ImProtoResponse{
		Type:    pb.MsgType_MSG_WITHDRAW_NOTIFICATION,
		Code:    pb.ProtoResponseCode_SUCCESS,
		Payload: mustMarshalProto(notification),
	}

	responseData, err := proto.Marshal(response)
	if err != nil {
		return fmt.Errorf("åºåˆ—åŒ–æ¶ˆæ¯å¤±è´¥: %w", err)
	}

	return s.channelManager.BroadcastToUser(userID, responseData)
}

// TransferFriendRequest è½¬å‘å¥½å‹è¯·æ±‚
func (s *TransferC2CMsgService) TransferFriendRequest(ctx context.Context, toUserID string, request *pb.FriendRequestPush) error {
	targetServer, err := s.getTargetServer(toUserID)
	if err != nil {
		return fmt.Errorf("è·å–ç›®æ ‡æœåŠ¡å™¨å¤±è´¥: %w", err)
	}

	if targetServer == s.localServerAddr {
		return s.sendFriendRequestToLocalUser(toUserID, request)
	}

	client, err := s.getGRPCClient(targetServer)
	if err != nil {
		return fmt.Errorf("è·å–gRPCå®¢æˆ·ç«¯å¤±è´¥: %w", err)
	}

	timeoutCtx, cancel := context.WithTimeout(ctx, 5*time.Second)
	defer cancel()

	resp, err := client.PushFriendRequest2Client(timeoutCtx, request)
	if err != nil {
		s.removeGRPCClient(targetServer)
		return fmt.Errorf("è°ƒç”¨è¿œç¨‹æœåŠ¡å™¨å¤±è´¥: %w", err)
	}

	if resp.Code != 0 {
		return fmt.Errorf("è¿œç¨‹æœåŠ¡å™¨è¿”å›é”™è¯¯: %s", resp.Message)
	}

	return nil
}

// sendFriendRequestToLocalUser å‘é€å¥½å‹è¯·æ±‚ç»™æœ¬åœ°ç”¨æˆ·
func (s *TransferC2CMsgService) sendFriendRequestToLocalUser(userID string, request *pb.FriendRequestPush) error {
	response := &pb.ImProtoResponse{
		Type:    pb.MsgType_FRIEND_REQUEST,
		Code:    pb.ProtoResponseCode_SUCCESS,
		Payload: mustMarshalProto(request),
	}

	responseData, err := proto.Marshal(response)
	if err != nil {
		return fmt.Errorf("åºåˆ—åŒ–æ¶ˆæ¯å¤±è´¥: %w", err)
	}

	return s.channelManager.BroadcastToUser(userID, responseData)
}

// GetStats è·å–ç»Ÿè®¡ä¿¡æ¯
func (s *TransferC2CMsgService) GetStats() TransferStats {
	return TransferStats{
		TotalTransferred: s.totalTransferred,
		SuccessCount:     s.successCount,
		FailureCount:     s.failureCount,
	}
}

// TransferStats è½¬å‘ç»Ÿè®¡
type TransferStats struct {
	TotalTransferred int64 `json:"total_transferred"`
	SuccessCount     int64 `json:"success_count"`
	FailureCount     int64 `json:"failure_count"`
}

// Shutdown å…³é—­æœåŠ¡
func (s *TransferC2CMsgService) Shutdown(ctx context.Context) {
	s.logger.Info("ğŸ”„ å…³é—­è·¨æœåŠ¡å™¨æ¶ˆæ¯è½¬å‘æœåŠ¡...")

	// å…³é—­æ‰€æœ‰gRPCè¿æ¥
	s.clientPool.Range(func(key, value interface{}) bool {
		conn := value.(*grpc.ClientConn)
		conn.Close()
		return true
	})

	s.logger.Info("âœ… è·¨æœåŠ¡å™¨æ¶ˆæ¯è½¬å‘æœåŠ¡å·²å…³é—­")
}

// mustMarshalProto protoåºåˆ—åŒ–
func mustMarshalProto(m proto.Message) []byte {
	data, _ := proto.Marshal(m)
	return data
}
